- Allow to set invited_by_* options on model

= 1.7.0

- Drop devise < 4 support
- Fix tests for devise 4.2

= 1.6.1

- Support 2 arguments on after_invite_path_for, inviter and invitee
- Support mongoid 6.0 (use :optional on invited_by relation)
- Support devise 4.1

= 1.6.0

- Support devise 4.0 and rails 5.0
- Add before/after invitation_created callbacks
- Fix invitation_due_at when invite_for is 0
- Add plain text mailer template
- Ruby 1.9 not supported anymore
- Adds :require_password_on_accepting config option, and ensure invitation is not accepted if password is required and removed from form

= 1.5.5

- Add optional options hash to invite! methods, they will be used for send_devise_notification call

= 1.5.4

- Ensure that all invited user passwords conform to a format
- Call set_minimum_password_length (if exists) on accept invitation as devise does
- Controllers inheriting from Devise::InvitationsController will now use 'devise.invitations' translations
  when using Devise >= 3.5. See https://github.com/plataformatec/devise/pull/3407 for more details.
- Add invitation due date to mailer

= 1.5.3

- Fix #585, avoid generating new password if there already is a encrypted one
- Give error if trying to register with a registered email

= 1.5.2

- Fix #571, accept invitation when password changes only if reset_password_token was present
- Add support for setting invited_by foreign key
- Set random initial password for invited users
- Don't override password while User.invite!

= 1.5.1

- Fix #562 Avoid using after_password_reset
- Fix #564

Compare: https://github.com/scambra/devise_invitable/compare/v1.5.0...v1.5.1

= 1.5.0

Override valid_password? and unauthenticated_message instead of active_for_authentication? and inactive_message, active_for_authentication? doesn't work for default behavior of invited users without password

- Get list & check for user(s) created by invite irrespective of status
- Update simple_form template's hash syntax